--- a/client/map2/index.html
+++ b/client/map2/index.html
@@ -11,13 +11,14 @@
     integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
     crossorigin=""></script>
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="../style.css"/>
     <script src="https://unpkg.com/jsts@2.0.8/dist/jsts.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src='polygons2.js'></script>
+    <script src='https://dl.dropbox.com/s/ap449g4go719x83/polygons2.js'></script>
 </head>
 <body>
     <div id="mapid"></div>
     <script src="map2.js"></script>
+    <script src="../common.js"></script>
 </body>
 </html>
