--- a/client/map2/index.html
+++ b/client/map2/index.html
@@ -18,6 +18,12 @@
 </head>
 <body>
     <div id="mapid"></div>
+    <div class="language-selector">
+        <input checked="checked" id="ln-hebrew" type="radio" name="language" value="he" />
+        <label class="language-ico israel" for="ln-hebrew"></label>
+        <input id="ln-english" type="radio" name="language" value="en" />
+        <label class="language-ico usa" for="ln-english"></label>
+    </div>
     <script src="map2.js"></script>
     <script src="../common.js"></script>
 </body>
