--- a/client/map/index.html
+++ b/client/map/index.html
@@ -18,6 +18,12 @@
 </head>
 <body>
     <div id="mapid"></div>
+    <div class="cc-selector">
+        <input checked="checked" id="ln-hebrew" type="radio" name="language" value="he" />
+        <label class="language-cc israel" for="ln-hebrew"></label>
+        <input id="ln-english" type="radio" name="language" value="en" />
+        <label class="language-cc usa" for="ln-english"></label>
+    </div>
     <script src="map.js"></script>
     <script src="../common.js"></script>
 </body>
