--- a/client/map2/index.html
+++ b/client/map2/index.html
@@ -10,21 +10,23 @@
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
     integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
     crossorigin=""></script>
-    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5.1.6/turf.min.js"></script>
     <link rel="stylesheet" href="../style.css"/>
-    <script src="https://unpkg.com/jsts@2.0.8/dist/jsts.min.js"></script>
+    <script src="https://unpkg.com/jsts@2.1.0/dist/jsts.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src='https://dl.dropbox.com/s/ap449g4go719x83/polygons2.js'></script>
+    <script src='../polygons2_33.js'></script>
+    <script src='../polygons2-names-dict.js'></script>
+    <script src="../localization.js"></script>
 </head>
 <body>
     <div id="mapid"></div>
     <div class="language-selector">
-        <input checked="checked" id="ln-hebrew" type="radio" name="language" value="he" />
-        <label class="language-ico israel" for="ln-hebrew"></label>
-        <input id="ln-english" type="radio" name="language" value="en" />
-        <label class="language-ico usa" for="ln-english"></label>
+        <a href="#he" class="language-ico israel" id="switch-language-he" data-language="he"></a>
+        <a href="#en" class="language-ico usa" id="switch-language-en" data-language="en"></a>
     </div>
     <script src="map2.js"></script>
-    <script src="../common.js"></script>
+    <script src="../map_utils.js"></script>
+    <script src="../app.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </body>
 </html>
