Adde multiselect, distribution graph
added multiselect; added distribution graph; ui fixes

--- a/client/map/index.html
+++ b/client/map/index.html
@@ -11,12 +11,12 @@
     integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
     crossorigin=""></script>
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
-    <link rel="stylesheet" href="../style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <script src="https://unpkg.com/jsts@2.0.8/dist/jsts.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src='../polygons2_2630.js'></script>
-    <script src='../polygons2-names-dict.js'></script>
-    <script src="../localization.js"></script>
+    <script src='polygons2_2630.js'></script>
+    <script src='location_names.js'></script>
+    <script src="localization.js"></script>
 </head>
 <body>
     <div id="mapid"></div>
@@ -25,7 +25,7 @@
         <a href="#en" class="language-ico usa" id="switch-language-en" data-language="en"></a>
     </div>
     <script src="map.js"></script>
-    <script src="../map_utils.js"></script>
-    <script src="../app.js"></script>
+    <script src="common.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
