--- a/client/map2/index.html
+++ b/client/map2/index.html
@@ -11,12 +11,13 @@
     integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
     crossorigin=""></script>
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5.1.6/turf.min.js"></script>
-    <link rel="stylesheet" href="../style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <script src="https://unpkg.com/jsts@2.1.0/dist/jsts.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src='../polygons2_33.js'></script>
-    <script src='../polygons2-names-dict.js'></script>
-    <script src="../localization.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src='polygons2_33.js'></script>
+    <script src='location_names.js'></script>
+    <script src="localization.js"></script>
 </head>
 <body>
     <div id="mapid"></div>
@@ -25,8 +26,7 @@
         <a href="#en" class="language-ico usa" id="switch-language-en" data-language="en"></a>
     </div>
     <script src="map2.js"></script>
-    <script src="../map_utils.js"></script>
-    <script src="../app.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="common.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
